Sua css phan product

--- a/activar/home.html
+++ b/activar/home.html
@@ -109,21 +109,24 @@
         <div class="container-fluid" style="padding-bottom: 50px;">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="feature-item set-bg" data-setbg="img/Thong_tin_bg.png"><!--thongtinhome.jpg-->
+                    <div class="feature-item set-bg" data-setbg="img/Thong_tin_bg.png">
+                        <!--thongtinhome.jpg-->
                         <h3>THÔNG TIN</h3>
                         <p>Cung cấp đầy đủ thông tin mới <br /> nhất về dịch bệnh Covid19</p>
                         <a href="thông tin.html" class="primary-btn f-btn">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="feature-item set-bg" data-setbg="img/Trieu_chung_bg.png"><!--trieuchunghome.jpg-->
+                    <div class="feature-item set-bg" data-setbg="img/Trieu_chung_bg.png">
+                        <!--trieuchunghome.jpg-->
                         <h3>TRIỆU CHỨNG</h3>
                         <p>Các triệu chứng cần quan <br />tâm và để ý</p>
                         <a href="triệu chứng.html" class="primary-btn f-btn">Read More</a>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="feature-item set-bg" data-setbg="img/Phong_chon_bg.png"><!--phongchonghome.jpg-->
+                    <div class="feature-item set-bg" data-setbg="img/Phong_chon_bg.png">
+                        <!--phongchonghome.jpg-->
                         <h3>PHÒNG CHỐNG </h3>
                         <p>Các phương pháp phòng chống khuyên <br /> dùng của các bác sĩ</p>
                         <a href="#" class="primary-btn f-btn">Read More</a>
@@ -233,13 +236,16 @@
 
                 <div class="display-inline">
                     <div class="display-block">
-                        <a href="https://play.google.com/store/apps/details?id=com.vnptit.innovation.ncovi"><img src="./img/NCOVI 2 đã sửa.png" alt=""></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.vnptit.innovation.ncovi"><img
+                                src="./img/NCOVI 2 đã sửa.png" alt=""></a>
                         <a href="https://apps.apple.com/app/id1501934178"><img src="./img/NCOVI đã sửa.jpg" alt=""></a>
                     </div>
 
                     <div class="display-block">
-                        <a href="https://play.google.com/store/apps/details?id=vn.suckhoetoandan.v2"><img src="./img/Sức khỏe việt nam 2 đã sửa.png" alt=""></a>
-                        <a href="https://apps.apple.com/app/id1489263065"><img src="./img/Sức khỏe Việt Nam đã sửa.jpg" alt=""></a>
+                        <a href="https://play.google.com/store/apps/details?id=vn.suckhoetoandan.v2"><img
+                                src="./img/Sức khỏe việt nam 2 đã sửa.png" alt=""></a>
+                        <a href="https://apps.apple.com/app/id1489263065"><img src="./img/Sức khỏe Việt Nam đã sửa.jpg"
+                                alt=""></a>
 
                     </div>
                 </div>
@@ -253,35 +259,35 @@
     <!-- Connect Section End -->
 
     <!-- Feedback Form Begin -->
-    <div class="feedback_container" >
+    <div class="feedback_container">
         <!-- Feedback Form Starts Here -->
-        <div id="feedback" >
-        <!-- Heading Of The Form -->
-        <div class="head">
-        <h3 class="feedback_h3">FeedBack Form</h3>
-        <p class="feedback_h3">This is feedback form. Send us your feedback !</p>
-        </div>
-        <!-- Feedback Form -->
-        <form action="#" id="form" method="post" name="form">
-        <input name="vname" placeholder="Your Name" type="text" value="">
-        <input name="vemail" placeholder="Your Email" type="text" value="">
-        <input name="sub" placeholder="Subject" type="text" value="">
-        <label class="feedback_h3">Your Suggestion/Feedback</label>
-        <textarea name="msg" placeholder="Type your text here..."></textarea>
-        <input id="send" name="submit" type="submit" value="Send Feedback">
-        </form>
-        <?php 
+        <div id="feedback">
+            <!-- Heading Of The Form -->
+            <div class="head">
+                <h3 class="feedback_h3">FeedBack Form</h3>
+                <p class="feedback_h3">This is feedback form. Send us your feedback !</p>
+            </div>
+            <!-- Feedback Form -->
+            <form action="#" id="form" method="post" name="form">
+                <input name="vname" placeholder="Your Name" type="text" value="">
+                <input name="vemail" placeholder="Your Email" type="text" value="">
+                <input name="sub" placeholder="Subject" type="text" value="">
+                <label class="feedback_h3">Your Suggestion/Feedback</label>
+                <textarea name="msg" placeholder="Type your text here..."></textarea>
+                <input id="send" name="submit" type="submit" value="Send Feedback">
+            </form>
+            <?php 
         include_once("emai_connection.php") 
         ?>
-        <!-- <?php include 'email_connection.php'?> -->
+            <!-- <?php include 'email_connection.php'?> -->
         </div>
         <!-- Feedback Form Ends Here -->
     </div>
     <!-- Feedback Form End -->
 
     <!-- Footer Section Begin -->
-    <footer class="footer-section" >
-        <div class="container" >
+    <footer class="footer-section">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-3">
                     <div class="footer-logo-item">
@@ -297,7 +303,8 @@
                             <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i
+                                    class="fa fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
@@ -328,12 +335,12 @@
                             <li>
                                 <i class="fa fa-phone"></i>
                                 <span>Số điện thoại:</span>
-                                None
+                                0386142616
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                None
+                                PrvCv19@gmai.com
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
