--- a/activar/product.html
+++ b/activar/product.html
@@ -90,12 +90,16 @@
             <div class="product-text">
                 <h1>Khẩu Trang</h1>
                 <h2>by PrvCv19</h2>
-                <p>Thiết kế 3D thoáng khí, giữ ấm không khí trước khi vào đường thở, làm giảm thiểu bệnh tai mũi họng không làm dính son môi lên khẩu trang đồng thời giúp ngăn khói bụi, giọt bắn, phấn hoa, virus trong không khí.</p>
+                <p>Thiết kế 3D thoáng khí, giữ ấm không khí trước khi vào đường thở, làm giảm thiểu bệnh tai mũi họng
+                    không làm dính son môi lên khẩu trang đồng thời giúp ngăn khói bụi, giọt bắn, phấn hoa, virus trong
+                    không khí.</p>
             </div>
             <div class="product-price-btn">
                 <p><span>45.000</span>đ</p>
                 <br>
-                <button type="button" onclick="location.href='https://shopee.vn/Combo-10-C%C3%A1i-kh%E1%BA%A9u-trang-Su-ch%E1%BB%91ng-khu%E1%BA%A9n-ch%E1%BB%91ng-b%E1%BB%A5i-t%C3%A1i-s%E1%BB%AD-d%E1%BB%A5ng-nhi%E1%BB%81u-l%E1%BA%A7n-i.21084881.5720099136'">Mua ngay</button>
+                <button type="button"
+                    onclick="location.href='https://shopee.vn/Combo-10-C%C3%A1i-kh%E1%BA%A9u-trang-Su-ch%E1%BB%91ng-khu%E1%BA%A9n-ch%E1%BB%91ng-b%E1%BB%A5i-t%C3%A1i-s%E1%BB%AD-d%E1%BB%A5ng-nhi%E1%BB%81u-l%E1%BA%A7n-i.21084881.5720099136'">Mua
+                    ngay</button>
             </div>
         </div>
     </div>
@@ -107,12 +111,16 @@
             <div class="product-text">
                 <h1>Xà Phòng</h1>
                 <h2>by PrvCv19</h2>
-                <p>Giúp bảo bệ bạn và gia đình khỏi 10 loại bệnh gây hại sức khỏe lây truyền qua da với thành phần diệt khuẩn tiên tiến Active5. Bọt xà bông Lifebuoy sẽ giúp bạn có một làn da sạch sẽ và cảm giác sảng khoái. </p>
+                <p>Giúp bảo bệ bạn và gia đình khỏi 10 loại bệnh gây hại sức khỏe lây truyền qua da với thành phần diệt
+                    khuẩn tiên tiến Active5. Bọt xà bông Lifebuoy sẽ giúp bạn có một làn da sạch sẽ và cảm giác sảng
+                    khoái. </p>
             </div>
             <div class="product-price-btn">
                 <p><span>15.000</span>đ</p>
                 <br>
-                <button type="button" onclick="location.href='https://tiki.vn/xa-bong-cuc-diet-khuan-lifebuoy-bao-ve-vuot-troi-21126123-125g-p460404.html?spid=168832&utm_source=google&utm_medium=cpc&utm_campaign=SEA_NBR_GGL_PLA_DTP_ALL_VN_ALL_UNK_UNK_C.ALL_X.2045169324_Y.80760265868_V.168832_W.DT_A.773055584082&gclid=CjwKCAjwvOHzBRBoEiwA48i6ApJihxcFbtwg3S5Od1DoJXFGaqNTU_ekd40DFAWBA9_RgSag3p2lWRoC4oUQAvD_BwE'">Mua ngay</button>
+                <button type="button"
+                    onclick="location.href='https://tiki.vn/xa-bong-cuc-diet-khuan-lifebuoy-bao-ve-vuot-troi-21126123-125g-p460404.html?spid=168832&utm_source=google&utm_medium=cpc&utm_campaign=SEA_NBR_GGL_PLA_DTP_ALL_VN_ALL_UNK_UNK_C.ALL_X.2045169324_Y.80760265868_V.168832_W.DT_A.773055584082&gclid=CjwKCAjwvOHzBRBoEiwA48i6ApJihxcFbtwg3S5Od1DoJXFGaqNTU_ekd40DFAWBA9_RgSag3p2lWRoC4oUQAvD_BwE'">Mua
+                    ngay</button>
             </div>
         </div>
     </div>
@@ -124,12 +132,15 @@
             <div class="product-text">
                 <h1>Nước Súc Miệng</h1>
                 <h2>by PrvCv19</h2>
-                <p>Giúp bảo vệ răng miệng toàn diện, ngừa mảng bám và giảm thiểu hôi miệng. Cho bạn tự tin với hơi thở thơm mát và hàm răng trắng sáng tạng rỡ.</p>
+                <p>Giúp bảo vệ răng miệng toàn diện, ngừa mảng bám và giảm thiểu hôi miệng. Cho bạn tự tin với hơi thở
+                    thơm mát và hàm răng trắng sáng tạng rỡ.</p>
             </div>
             <div class="product-price-btn">
                 <p><span>219.000</span>đ</p>
                 <br>
-                <button type="button" onclick="location.href='https://tiki.vn/combo-2-nuoc-suc-mieng-huong-bac-ha-listerine-cool-mint-750ml-chai-p554282.html?src=search&2hi=0&keyword=n%C6%B0%E1%BB%9Bc%20s%C3%BAc%20mi%E1%BB%87ng&_lc=Vk4wMzQwMTMwMDM%3D'">Mua ngay</button>
+                <button type="button"
+                    onclick="location.href='https://tiki.vn/combo-2-nuoc-suc-mieng-huong-bac-ha-listerine-cool-mint-750ml-chai-p554282.html?src=search&2hi=0&keyword=n%C6%B0%E1%BB%9Bc%20s%C3%BAc%20mi%E1%BB%87ng&_lc=Vk4wMzQwMTMwMDM%3D'">Mua
+                    ngay</button>
             </div>
         </div>
     </div>
@@ -141,12 +152,15 @@
             <div class="product-text">
                 <h1>Nhiệt Kế</h1>
                 <h2>by PrvCv19</h2>
-                <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects. The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
+                <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects.
+                    The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
             </div>
             <div class="product-price-btn">
                 <p><span>199.000</span>Đ</p>
                 <br>
-                <button type="button" onclick="location.href='https://tiki.vn/nhiet-ke-dien-tu-xiaomi-miaomiaoce-p15595597.html?spid=15595598&utm_source=google&utm_medium=cpc&utm_campaign=SEA_NBR_GGL_PLA_DTP_ALL_VN_ALL_UNK_UNK_C.ALL_X.1057274772_Y.54169762056_V.15595598_W.DT_A.877516657142&gclid=CjwKCAjwvOHzBRBoEiwA48i6AgseW1e3NmFeVnJpFKhTdTzH93antCTa61yWE-fjHoClL88bt0Mw7BoCqJEQAvD_BwE'">Mua ngay</button>
+                <button type="button"
+                    onclick="location.href='https://tiki.vn/nhiet-ke-dien-tu-xiaomi-miaomiaoce-p15595597.html?spid=15595598&utm_source=google&utm_medium=cpc&utm_campaign=SEA_NBR_GGL_PLA_DTP_ALL_VN_ALL_UNK_UNK_C.ALL_X.1057274772_Y.54169762056_V.15595598_W.DT_A.877516657142&gclid=CjwKCAjwvOHzBRBoEiwA48i6AgseW1e3NmFeVnJpFKhTdTzH93antCTa61yWE-fjHoClL88bt0Mw7BoCqJEQAvD_BwE'">Mua
+                    ngay</button>
             </div>
         </div>
     </div>
@@ -158,20 +172,23 @@
             <div class="product-text">
                 <h1>Nước Rửa Tay</h1>
                 <h2>by PrvCv19</h2>
-                <p>Giúp làm sạch và dưỡng ẩm da tay, giúp chống lão hóa và nuôi dưỡng làn da. Ngăn ngừa nguy cơ lây lan dịch bệnh khi tiếp xúc hàng ngày.</p>
+                <p>Giúp làm sạch và dưỡng ẩm da tay, giúp chống lão hóa và nuôi dưỡng làn da. Ngăn ngừa nguy cơ lây lan
+                    dịch bệnh khi tiếp xúc hàng ngày.</p>
             </div>
             <div class="product-price-btn">
                 <p><span>59.000</span>đ</p>
                 <br>
-                <button type="button" onclick="location.href='https://www.pharmacity.vn/san-pham/nuoc-rua-tay-pharmacity-apple-kiwi-500ml/'">Mua ngay</button>
+                <button type="button"
+                    onclick="location.href='https://www.pharmacity.vn/san-pham/nuoc-rua-tay-pharmacity-apple-kiwi-500ml/'">Mua
+                    ngay</button>
             </div>
         </div>
     </div>
-      
-      <!-- Product Showcase End -->
+
+    <!-- Product Showcase End -->
 
     <!-- Gallery Section Begin -->
-    <!-- <section class="gallery-section spad">
+    <section class="gallery-section spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -251,7 +268,8 @@
                             <div class="gi-hover">
                                 <a href="img/Product/nuocsucmieng.png" class="image-popup"><i
                                         class="fa fa-search-plus"></i></a>
-                                <a href="https://tiki.vn/combo-2-nuoc-suc-mieng-huong-bac-ha-listerine-cool-mint-750ml-chai-p554282.html?src=search&2hi=0&keyword=n%C6%B0%E1%BB%9Bc%20s%C3%BAc%20mi%E1%BB%87ng&_lc=Vk4wMzQwMTMwMDM%3D"><i
+                                <a
+                                    href="https://tiki.vn/combo-2-nuoc-suc-mieng-huong-bac-ha-listerine-cool-mint-750ml-chai-p554282.html?src=search&2hi=0&keyword=n%C6%B0%E1%BB%9Bc%20s%C3%BAc%20mi%E1%BB%87ng&_lc=Vk4wMzQwMTMwMDM%3D"><i
                                         class="fa fa-chain"></i></a>
                                 <h6>Nước súc miệng</h6>
                             </div>
@@ -261,7 +279,7 @@
 
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Gallery Section End -->
 
     <!-- Footer Section Begin -->
@@ -282,7 +300,8 @@
                             <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i
+                                    class="fa fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
@@ -313,12 +332,12 @@
                             <li>
                                 <i class="fa fa-phone"></i>
                                 <span>Số điện thoại:</span>
-                                None
+                                0386142616
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                None
+                                PrvCv19@gmai.com
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
