--- a/activar/test1.html
+++ b/activar/test1.html
@@ -79,10 +79,10 @@
                 <div class="slide1">
                     <div class="quiz-container">
                         <div id="quiz">
-                    </div>
-                            <button id="previous" style="margin-top:26%">Previous Question</button>
-                            <button id="next" style="margin-top:26%">Next Question</button>
-                            <button id="submit" style="margin-top:26%">Submit Quiz</button>
+                        </div>
+                        <button id="previous" style="margin-top:26%">Previous Question</button>
+                        <button id="next" style="margin-top:26%">Next Question</button>
+                        <button id="submit" style="margin-top:26%">Submit Quiz</button>
                     </div>
 
                     <div id="results" style="margin-top:20%"></div>
@@ -319,12 +319,12 @@
                             <li>
                                 <i class="fa fa-phone"></i>
                                 <span>Số điện thoại:</span>
-                                None
+                                0386142616
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                None
+                                PrvCv19@gmai.com
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
