--- a/activar/test3.html
+++ b/activar/test3.html
@@ -80,16 +80,16 @@
                 <div class="slide1">
                     <div class="quiz-container">
                         <div id="quiz">
+                        </div>
+                        <button id="previous" style="margin-top:26%">Previous Question</button>
+                        <button id="next" style="margin-top:26%">Next Question</button>
+                        <button id="submit" style="margin-top:26%">Submit Quiz</button>
                     </div>
-                            <button id="previous" style="margin-top:26%">Previous Question</button>
-                            <button id="next" style="margin-top:26%">Next Question</button>
-                            <button id="submit" style="margin-top:26%">Submit Quiz</button>
-                     </div>
-    
+
                     <div id="results" style="margin-top:20%"></div>
                 </div>
 
-                
+
                 <!-- <div class="slide1">
                     <div>
                         <div class="quest">
@@ -287,7 +287,8 @@
                             <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i
+                                    class="fa fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
@@ -318,12 +319,12 @@
                             <li>
                                 <i class="fa fa-phone"></i>
                                 <span>Số điện thoại:</span>
-                                None
+                                0386142616
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                None
+                                PrvCv19@gmai.com
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
