--- a/activar/test4.html
+++ b/activar/test4.html
@@ -32,37 +32,37 @@
         <div class="loader"></div>
     </div>
 
-<!-- Header Section Begin -->
-<header class="header-section header-normal">
-    <div class="container-fluid">
-        <div class="logo">
-            <a href="./home.html">
-                <img src="img/LOGO_1.png" alt="">
-            </a>
-        </div>
-        <div class="top-social">
-            <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
-            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
-        </div>
-        <div class="container">
-            <div class="nav-menu">
-                <nav class="mainmenu mobile-menu">
-                    <ul>
-                        <li><a href="./home.html">Home</a></li>
-                        <li><a href="./thông tin.html">Thông tin</a></li>
-                        <li><a href="./triệu chứng.html">Triệu chứng</a></li>
-                        <li><a href="./phòng chống.html">Phòng chống</a></li>
-                        <li class="active"><a href="./product.html">Sản phẩm</a>
-                    </ul>
-                </nav>
+    <!-- Header Section Begin -->
+    <header class="header-section header-normal">
+        <div class="container-fluid">
+            <div class="logo">
+                <a href="./home.html">
+                    <img src="img/LOGO_1.png" alt="">
+                </a>
             </div>
+            <div class="top-social">
+                <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
+            </div>
+            <div class="container">
+                <div class="nav-menu">
+                    <nav class="mainmenu mobile-menu">
+                        <ul>
+                            <li><a href="./home.html">Home</a></li>
+                            <li><a href="./thông tin.html">Thông tin</a></li>
+                            <li><a href="./triệu chứng.html">Triệu chứng</a></li>
+                            <li><a href="./phòng chống.html">Phòng chống</a></li>
+                            <li class="active"><a href="./product.html">Sản phẩm</a>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div id="mobile-menu-wrap"></div>
         </div>
-        <div id="mobile-menu-wrap"></div>
-    </div>
-</header>
-<!-- Header End -->
+    </header>
+    <!-- Header End -->
 
     <!-- Aboutus Section Begin -->
     <section class="aboutus-section spad">
@@ -81,10 +81,10 @@
                 <div class="slide1">
                     <div class="quiz-container">
                         <div id="quiz">
-                    </div>
-                            <button id="previous" style="margin-top:26%">Previous Question</button>
-                            <button id="next" style="margin-top:26%">Next Question</button>
-                            <button id="submit" style="margin-top:26%">Submit Quiz</button>
+                        </div>
+                        <button id="previous" style="margin-top:26%">Previous Question</button>
+                        <button id="next" style="margin-top:26%">Next Question</button>
+                        <button id="submit" style="margin-top:26%">Submit Quiz</button>
                     </div>
 
                     <div id="results" style="margin-top:20%"></div>
@@ -294,7 +294,8 @@
                             <a href="https://www.facebook.com/Noobcoder012/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/jack.andrea.54/"><i class="fa fa-facebook"></i></a>
                             <a href="https://www.facebook.com/nghianguyen992004/"><i class="fa fa-facebook"></i></a>
-                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/profile.php?id=100014527922284"><i
+                                    class="fa fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
@@ -325,12 +326,12 @@
                             <li>
                                 <i class="fa fa-phone"></i>
                                 <span>Số điện thoại:</span>
-                                None
+                                0386142616
                             </li>
                             <li>
                                 <i class="fa fa-envelope-o"></i>
                                 <span>Email:</span>
-                                None
+                                PrvCv19@gmai.com
                             </li>
                             <li>
                                 <i class="fa fa-map-marker"></i>
