--- a/activar/home.html
+++ b/activar/home.html
@@ -60,7 +60,7 @@
                                     <li><a href="./blog-single.html">Blog Details</a></li>
                                 </ul> -->
                             </li>
-                            <!-- <li><a href="./contact.html">Contacts</a></li> -->
+                            <li><a href="./blog.html">Blog</a></li>
                         </ul>
                     </nav>
                 </div>
