--- a/activar/triệu chứng.html
+++ b/activar/triệu chứng.html
@@ -129,7 +129,7 @@
                             <li class="active" data-filter="*">Tất cả ảnh</li>
                             <li data-filter=".crossfit">Triệu chứng</li>
                             <li data-filter=".workout">Sốt</li>
-                            <li data-filter=".gym">Khuyến cáo của WWO</li>
+                            <li data-filter=".gym">Khuyến cáo của WHO</li>
                         </ul>
                     </div>
                 </div>
