--- a/activar/thông tin.html
+++ b/activar/thông tin.html
@@ -9,6 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Thông tin</title>
 
+
+    <link rel="shortcut icon" href="img/logo_web.png" />
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -246,7 +248,7 @@
 
         </footer>
         <!-- Footer Section End -->
-
+        <embed src="./music/bensound-adventure.mp3" loop="true" autostart="true" width="2" height="0">
         <!-- Js Plugins -->
         <script src="js/jquery-3.3.1.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
