--- a/activar/home.html
+++ b/activar/home.html
@@ -9,6 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
 
+    <link rel="shortcut icon" href="img/logo_web.png" />
+
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,600,700,800,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap" rel="stylesheet">
@@ -355,6 +357,7 @@
 
     </footer>
     <!-- Footer Section End -->
+    
 
     <?php include 'email_connection.php';?>
 
