UP LEN DE CHECK

--- a/activar/blog.html
+++ b/activar/blog.html
@@ -10,7 +10,7 @@
     <link rel="shortcut icon" href="img/logo_web.png" />
     <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700%7CPT+Serif:400,700' rel='stylesheet'
         type='text/css'>
-        
+
     <link rel="stylesheet" type="text/css" href='css/clear.css' />
     <link rel="stylesheet" type="text/css" href='css/common.css' />
     <link rel="stylesheet" type="text/css" href='css/font-awesome.min.css' />
@@ -28,6 +28,7 @@
 
 <body class="home blog">
     <div class="doc-loader"></div>
+    
 
     <!-- Header Section Begin -->
     <header class="header-section header-normal" style="display: initial;width: fit-content;">
@@ -47,11 +48,17 @@
                 <div class="nav-menu" style="text-align: center;/* margin: 80px; */">
                     <nav class="mainmenu mobile-menu">
                         <ul>
-                            <li><a href="./home.html">Home</a></li>
+                            <li class="active"><a href="./home.html">Home</a></li>
                             <li><a href="./thông tin.html">Thông tin</a></li>
                             <li><a href="./triệu chứng.html">Triệu chứng</a></li>
                             <li><a href="./phòng chống.html">Phòng chống</a></li>
-                            <li class="active"><a href="./product.html">Sản phẩm</a>
+                            <li ><a href="./product.html">Sản phẩm</a>
+                            <li><a href="./blog.html">Blog</a>
+                                <ul class="dropdown">
+                                    <li><a href="./about3.html">Về Chúng Tôi</a></li>
+                                    <li><a href="./contact.html">Liên Hệ</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </nav>
                 </div>
@@ -61,12 +68,8 @@
     </header>
     <!-- Header End -->
 
-    <div class="content-1170 header-holder center-relative">
-        <div class="header-logo left">
-            <a href="home.html">
-                <img src="img/blog-logo-2.png" alt="PrvCv19">
-            </a>
-        </div>
+    <!-- <div class="content-1170 header-holder center-relative">
+
 
         <div class="header-menu">
             <div class="toggle-holder relative">
@@ -79,11 +82,10 @@
 
             <nav id="header-main-menu" class="big-menu">
                 <ul class="main-menu sm sm-clean">
-                    <li><a href="home.html" class="current">Trang Chủ</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="blog.html" class="current">Blog</a></li> -->
                     <!-- <li><a href="about.html">About</a></li>
                         <li><a href="about2.html">About 2</a></li> -->
-                    <li><a href="about3.html">Về Chúng Tôi</a></li>
+                    <!-- <li><a href="about3.html">Về Chúng Tôi</a></li>
                     <li><a href="contact.html">Liên Hệ</a>
                         <ul class="sub-menu">
                             <li><a href="contact2.html">Liên Hệ + Bản Đồ</a></li>
@@ -94,7 +96,7 @@
             <div class="clear"></div>
         </div>
         <div class="clear"></div>
-    </div>
+    </div> -->
 
     <div class="block content-1170 center-relative">
         <div class="blog-holder block center-relative">
@@ -295,29 +297,7 @@
 
     <!--Footer-->
 
-    <footer class="footer">
-        <div class="content-1170 center-relative">
-            <!-- <ul>
-                    <li class="left-footer-content" style="margin-left: auto;margin-right: auto;">
-                        © 2020 All rights reserved.All made by PrvCv19 Team  <i class="fa fa-heart">
-                    </li> -->
-            <!-- <li class="center-footer-content">
-                        <a href="blog.html">
-                            <img src="img/katt_default_footer_logo.png" alt="Katt">
-                        </a>
-                    </li>
-                    <li class="right-footer-contnet">
-                        <a href="#">Twitter</a>
-                        <a href="#">Linkedin</a>
-                        <a href="#">Dribbble</a>
-                        <a href="#">Instagram</a>
-                    </li>
-                    <li class="left-footer-content mobile">
-                        © 2020 All rights reserved. <i class="fa fa-heart">
-                    </li> -->
-            </ul>
-        </div>
-    </footer>
+
 
 
 
