--- a/activar/about3.html
+++ b/activar/about3.html
@@ -143,12 +143,10 @@
                     <br>
                     <br>
                     <div class="one_half">
-                        <p><strong>State of our company</strong></p>
+                        <p><strong>Cảm nhận khi làm việc</strong></p>
                         <br>
                         <p>
-                            Because they are hard, because that goal will serve to organize and measure the best of our
-                            energies and skills, because that challenge is one that we are willing to accept, one we are
-                            unwilling to postpone and one.
+                            "Những ngày vừa rồi quả là những ngày khó khăn. Khi vừa phải cân bằng thời gian giữa việc làm các bài tập trên lớp vừa dành thời gian để nghiên cứu thêm kiến thức để hoàn thiện được trang web. Và quả thực, cuộc thi đã giúp tôi hiểu được rất nhiều thứ. Từ 1 cậu bé chỉ biết "code in line" với từng thẻ tag trong HTML để code  CSS thì giờ tôi đã thành thạo với nhiều kĩ năng hơn. Có lẽ, đây sẽ là khoảng thời gian đáng nhớ mà sau này nhìn lại tôi có thể tự hào về chính mình.
                             <br>
                         </p>
                     </div>
@@ -209,12 +207,11 @@
                         <br>
                         <div class="clear"></div>
                         <div class="one_half">
-                            <p><strong>State of our company</strong></p>
+                            <p><strong>Cảm nhận về quá trình làm việc:</strong></p>
                             <br>
                             <p>
-                                Because they are hard, because that goal will serve to organize and measure the best of
-                                our energies and skills, because that challenge is one that we are willing to accept,
-                                one we are unwilling to postpone and one.
+                                Mặc dù trong quá trình code gặp phải rất nhiều khó khăn nhưng e đã đc mọi người trong team giúp đỡ hỗ trợ 1 cách rất nhiệt tình. Dù mới chỉ làm việc cùng team trong vòng hơn 1 tuần thôi, nhưng dường như mọi người trong team đã có thể dễ dàng trong việc giao tiếp hỗ trợ lẫn nhau, ai cũng luôn cố gắng hết sức để giúp cho bài dự thi của cả nhóm đc hoàn thiện. e rất cảm ơn MindX đã tổ chức ra 1 cuộc thi, 1 sân chơi rất bổ ích k chỉ cho học viên của MindX mà còn cho toàn thể hs từ 8 đến 18 tuổi tham gia. Cuộc thi này đã vừa giúp nâng cao hiểu biết của người dân về bệnh dịch nguy hiểm này, vừa giúp học viên ôn luyện kiến thức và có thêm kĩ năng thực thế, và hơn hết rèn cho học viên tính đoàn kết và thân thiết với nhau hơn.
+e rất vui vì đã được tham dự một cuộc thi bổ ích như thế này và e mong rằng sau e sẽ còn được tham gia thêm nhiều cuộc thi bổ ích mà trung tâm tổ chức.
                                 <br>
                             </p>
                         </div>
